# MC4J

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  MODDING.md  README.md  compile  debug.sh  flake.nix  meson.build  meson.options  run.sh  thirdpartylegalnotices.txt  victims.yml
4J.Input/: 4J_Input.cpp  4J_Input.h  CMakeLists.txt  meson.build  stdafx.h
4J.Profile/: 4J_Profile.cpp  4J_Profile.h  CMakeLists.txt  meson.build  stdafx.h
4J.Render/: 4J_Render.cpp  4J_Render.h  CMakeLists.txt  meson.build  stdafx.h
4J.Storage/: 4J_Storage.cpp  4J_Storage.h  CMakeLists.txt  meson.build  stdafx.h
Minecraft.Assets/: README.md  meson.build
Minecraft.Client/: CMakeLists.txt  Chunk.cpp  ClientConnection.cpp  ClientConstants.cpp  ClientConstants.h  ClockTexture.cpp  CompassTexture.cpp  DemoLevel.cpp  DemoLevel.h  DragonModel.cpp  EntityRenderDispatcher.cpp  Extrax64Stubs.cpp  Font.cpp  GameRenderer.cpp  Gui.cpp  Input.cpp  ItemFrameRenderer.cpp  ItemInHandRenderer.cpp  ItemRenderer.cpp  LevelRenderer.cpp  LevelRenderer.h  LocalPlayer.cpp  Minecraft.cpp  Minecraft.h  MinecraftServer.cpp  MinecraftServer.h  MobRenderer.cpp  ModLoader.cpp  ModLoader.h  MultiPlayerChunkCache.cpp  MultiPlayerGameMode.cpp  MultiPlayerLevel.cpp  MultiPlayerLocalPlayer.cpp  Options.cpp  PaintingRenderer.cpp  PendingConnection.cpp  PlayerChunkMap.cpp  PlayerConnection.cpp  PlayerList.cpp  PlayerRenderer.cpp  (+9 more)
Minecraft.Client/Commands/: TeleportCommand.cpp  TeleportCommand.h
Minecraft.Client/Common/: Consoles_App.cpp  Consoles_App.h
Minecraft.Client/GameState/: AdventureMode.cpp  AdventureMode.h  CreativeMode.cpp  DemoMode.cpp  DemoUser.cpp  DemoUser.h  GameMode.cpp  Options.cpp  Options.h  Settings.cpp  Settings.h  StatsCounter.cpp  StatsCounter.h  StatsSyncer.cpp  StatsSyncer.h  SurvivalMode.cpp
Minecraft.Client/Input/: ConsoleInput.cpp  ConsoleInput.h  ConsoleInputSource.h  Input.cpp  Input.h  KeyMapping.cpp  KeyMapping.h
Minecraft.Client/Level/: DemoLevel.cpp  DemoLevel.h  DerivedServerLevel.cpp  DerivedServerLevel.h  MultiPlayerLevel.cpp  MultiPlayerLevel.h  ServerLevel.cpp  ServerLevel.h  ServerLevelListener.cpp  ServerLevelListener.h
Minecraft.Client/Linux/: LinuxGL.h  LinuxStubs.h  Linux_Minecraft.cpp
Minecraft.Client/Network/: ClientConnection.cpp  ClientConnection.h  MultiPlayerChunkCache.cpp  MultiPlayerChunkCache.h  PendingConnection.cpp  PendingConnection.h  PlayerChunkMap.cpp  PlayerChunkMap.h  PlayerConnection.cpp  PlayerConnection.h  PlayerInfo.h  PlayerList.cpp  PlayerList.h  ServerChunkCache.cpp  ServerChunkCache.h  ServerCommandDispatcher.cpp  ServerCommandDispatcher.h  ServerConnection.cpp  ServerConnection.h  ServerInterface.h
Minecraft.Client/PS3/: PS3_Minecraft.cpp
Minecraft.Client/PSVita/: PSVita_App.cpp  PSVita_Minecraft.cpp
Minecraft.Client/Platform/: Extrax64Stubs.cpp  stdafx.h  stubs.cpp
Minecraft.Client/Player/: EntityTracker.cpp  EntityTracker.h  LocalPlayer.cpp  LocalPlayer.h  MultiPlayerGameMode.cpp  MultiPlayerGameMode.h  MultiPlayerLocalPlayer.cpp  MultiPlayerLocalPlayer.h  RemotePlayer.cpp  RemotePlayer.h  ServerPlayer.cpp  ServerPlayer.h  ServerPlayerGameMode.cpp  TrackedEntity.cpp  TrackedEntity.h  User.cpp  User.h
Minecraft.Client/Rendering/: Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  Cube.cpp  Cube.h  Frustum.cpp  FrustumCuller.cpp  FrustumCuller.h  FrustumData.cpp  FrustumData.h  GameRenderer.cpp  GameRenderer.h  LevelRenderer.cpp  LevelRenderer.h  Lighting.cpp  Minimap.cpp  Minimap.h  OffsettedRenderList.cpp  Polygon.cpp  Polygon.h  Tesselator.cpp  Tesselator.h  TexOffs.cpp  Vertex.cpp  Vertex.h  glWrapper.cpp
Minecraft.Client/Textures/: BufferedImage.cpp  BufferedImage.h  ClockTexture.cpp  ClockTexture.h  CompassTexture.cpp  CompassTexture.h  HttpTexture.cpp  HttpTexture.h  MemTexture.cpp  MemTexture.h  MemTextureProcessor.h  MobSkinMemTextureProcessor.cpp  MobSkinTextureProcessor.cpp  Texture.cpp  Texture.h  TextureHolder.cpp  TextureHolder.h  TextureManager.cpp  TextureManager.h  Textures.cpp  Textures.h
Minecraft.Client/UI/: Button.cpp  Button.h  EditBox.cpp  EditBox.h  Font.cpp  Font.h  Gui.cpp  Gui.h  GuiComponent.cpp  GuiComponent.h  GuiMessage.cpp  GuiMessage.h  Rect2i.cpp  Screen.cpp  Screen.h  ScreenSizeCalculator.cpp  ScrolledSelectionList.cpp  ScrolledSelectionList.h  SimpleIcon.cpp  SimpleIcon.h  SlideButton.cpp  SlideButton.h  SmallButton.cpp  SmallButton.h
Minecraft.Client/Utils/: ArchiveFile.cpp  ArchiveFile.h  MemoryTracker.cpp  MemoryTracker.h  StringTable.cpp  StringTable.h  Timer.cpp  WstringLookup.cpp  WstringLookup.h
Minecraft.Client/Windows64/: Windows64_Minecraft.cpp
Minecraft.Client/Xbox/: MinecraftWindows.rc
Minecraft.World/: Animal.cpp  AnimatePacket.cpp  BlockRegionUpdatePacket.cpp  BufferedOutputStream.cpp  ByteArrayInputStream.cpp  ByteBuffer.cpp  CMakeLists.txt  CompoundTag.h  ConsoleSaveFileSplit.cpp  DataInputStream.cpp  DataOutputStream.cpp  Dimension.cpp  DirectoryLevelStorage.cpp  EnchantmentContainer.cpp  EnderMan.cpp  Entity.cpp  Entity.h  EntityIO.cpp  FileHeader.h  FileInputStream.cpp  Fireball.cpp  Hasher.cpp  InteractPacket.cpp  Inventory.cpp  Item.cpp  KickPlayerPacket.cpp  Level.cpp  LevelEventPacket.cpp  ListTag.h  LoginPacket.cpp  Minecart.cpp  MobEffect.cpp  MobEffectInstance.cpp  Monster.cpp  MoveEntityPacket.cpp  MoveEntityPacketSmall.cpp  Player.cpp  PlayerEnderChestContainer.cpp  Random.cpp  RandomLevelSource.cpp  (+12 more)
Minecraft.World/Blocks/: AirTile.cpp  AnvilTile.cpp  AnvilTile.h  BedTile.cpp  BedTile.h  BookshelfTile.cpp  BrewingStandTile.cpp  BrewingStandTile.h  ButtonTile.cpp  ButtonTile.h  CactusTile.cpp  CactusTile.h  CakeTile.cpp  CakeTile.h  CarrotTile.cpp  CauldronTile.cpp  CauldronTile.h  ChestTile.cpp  ChestTile.h  ClayTile.cpp  ClothTile.cpp  CocoaTile.cpp  CocoaTile.h  CoralTile.cpp  CropTile.cpp  CropTile.h  DeadBushTile.cpp  DeadBushTile.h  DetectorRailTile.cpp  DiodeTile.cpp  DirectionalTile.cpp  DirtTile.cpp  DispenserTile.cpp  DispenserTile.h  DoorTile.cpp  DoorTile.h  EggTile.cpp  EnchantmentTableTile.cpp  EnchantmentTableTile.h  EnderChestTile.cpp  (+140 more)
(+2548 files in other folders)
