#
# Asset copy
#


client_platform_path = meson.project_source_root() / 'Minecraft.Client/Platform'

install_subdir('Common', install_dir : get_option('prefix'))

#
# Asset build
#

# TODO: Need to make this take inputs
localisation = custom_target('Minecraft.Assets_Localisation',
  output : [ 'languages.loc', 'strings.h' ],
  command : [
    python, meson.project_source_root() / 'scripts/pack_loc.py',
    meson.current_source_dir() / 'Windows64Media/loc',
    '@OUTPUT0@',
    '@OUTPUT1@'
  ]
)

colour_table = custom_target('Minecraft.Assets_Colour_Table',
  output : 'HTMLColours.col',
  input : meson.current_source_dir() / 'Common/Media/HTMLColours.xml',
  command : [
    'python3', meson.project_source_root() / 'scripts/build_col.py',
    '@INPUT@',
    '@OUTPUT@'
  ]
)

archive_sources = [ 
  localisation[0], # client_platform_path / 'Windows64Media/Media/languages.loc',
  colour_table,
  'Common/Media/splashes.txt',
  'Common/Media/Graphics/SaveChest.png',
  'Common/Media/Graphics/MinecraftIcon.png',
  'Common/Media/Graphics/TexturePackIcon.png',
  'Windows64Media/Media/Tutorial.pck',
  'Windows64Media/Media/skinWin.swf',
  'Windows64Media/Media/skinHDWin.swf',
  'Windows64Media/Media/DLCOffersMenu480.swf',
  'Windows64Media/Media/DLCOffersMenu720.swf',
  'Windows64Media/Media/DLCOffersMenu1080.swf',
  'Windows64Media/Media/DLCOffersMenuVita.swf'
]
archive_sources_movies1080 = [
  'Common/Media/skinHDGraphics.swf',
  'Common/Media/skinHDGraphicsHud.swf',
  'Common/Media/skinHDGraphicsLabels.swf',
  'Common/Media/skinHDGraphicsInGame.swf',
  'Common/Media/skinHD.swf',
  'Common/Media/skinHDHud.swf',
  'Common/Media/skinHDLabels.swf',
  'Common/Media/skinHDInGame.swf',
  'Common/Media/AnvilMenu1080.swf',
  'Common/Media/BrewingStandMenu1080.swf',
  'Common/Media/ChestMenu1080.swf',
  'Common/Media/ChestLargeMenu1080.swf',
  'Common/Media/ComponentLogo1080.swf',
  'Common/Media/ComponentLogoSplit1080.swf',
  'Common/Media/Controls1080.swf',
  'Common/Media/ControlsRemotePlay1080.swf',
  'Common/Media/CreateWorldMenu1080.swf',
  'Common/Media/CreativeMenu1080.swf',
  'Common/Media/Credits1080.swf',
  'Common/Media/Crafting2x2Menu1080.swf',
  'Common/Media/Crafting3x3Menu1080.swf',
  'Common/Media/DeathMenu1080.swf',
  'Common/Media/DebugCreateSchematic1080.swf',
  'Common/Media/DebugMenu1080.swf',
  'Common/Media/DebugOptionsMenu1080.swf',
  'Common/Media/DebugSetCamera1080.swf',
  'Common/Media/DebugUIConsoleComponent1080.swf',
  'Common/Media/DebugUIMarketingGuide1080.swf',
  'Common/Media/DLCMainMenu1080.swf',
  'Common/Media/DispenserMenu1080.swf',
  'Common/Media/EnchantingMenu1080.swf',
  'Common/Media/EndPoem1080.swf',
  'Common/Media/EULA1080.swf',
  'Common/Media/FullscreenProgress1080.swf',
  'Common/Media/FurnaceMenu1080.swf',
  'Common/Media/HelpAndOptionsMenu1080.swf',
  'Common/Media/HowToPlay1080.swf',
  'Common/Media/HowToPlayMenu1080.swf',
  'Common/Media/HUD1080.swf',
  'Common/Media/InGameHostOptions1080.swf',
  'Common/Media/InGameInfoMenu1080.swf',
  'Common/Media/InGamePlayerOptions1080.swf',
  'Common/Media/InGameTeleportMenu1080.swf',
  'Common/Media/Intro1080.swf',
  'Common/Media/InventoryMenu1080.swf',
  'Common/Media/JoinMenu1080.swf',
  'Common/Media/LoadOrJoinMenu1080.swf',
  'Common/Media/LaunchMoreOptionsMenu1080.swf',
  'Common/Media/LeaderboardMenu1080.swf',
  'Common/Media/LoadMenu1080.swf',
  'Common/Media/MainMenu1080.swf',
  'Common/Media/MenuBackground1080.swf',
  'Common/Media/MessageBox1080.swf',
  'Common/Media/NewUpdateMessage1080.swf',
  'Common/Media/Panorama1080.swf',
  'Common/Media/PauseMenu1080.swf',
  'Common/Media/PressStartToPlay1080.swf',
  'Common/Media/QuadrantSignin1080.swf',
  'Common/Media/ReinstallMenu1080.swf',
  'Common/Media/SaveMenu1080.swf',
  'Common/Media/SaveMessage1080.swf',
  'Common/Media/SettingsMenu1080.swf',
  'Common/Media/SettingsAudioMenu1080.swf',
  'Common/Media/SettingsControlMenu1080.swf',
  'Common/Media/SettingsGraphicsMenu1080.swf',
  'Common/Media/SettingsOptionsMenu1080.swf',
  'Common/Media/SettingsUIMenu1080.swf',
  'Common/Media/SignEntryMenu1080.swf',
  'Common/Media/SkinSelectMenu1080.swf',
  'Common/Media/Timer1080.swf',
  'Common/Media/ToolTips1080.swf',
  'Common/Media/TradingMenu1080.swf',
  'Common/Media/TutorialPopup1080.swf',
  'Common/Media/AnvilMenuSplit1080.swf',
  'Common/Media/BrewingStandMenuSplit1080.swf',
  'Common/Media/ChestMenuSplit1080.swf',
  'Common/Media/ChestLargeMenuSplit1080.swf',
  'Common/Media/ControlsSplit1080.swf',
  'Common/Media/Crafting2x2MenuSplit1080.swf',
  'Common/Media/Crafting3x3MenuSplit1080.swf',
  'Common/Media/CreativeMenuSplit1080.swf',
  'Common/Media/DeathMenuSplit1080.swf',
  'Common/Media/DispenserMenuSplit1080.swf',
  'Common/Media/EnchantingMenuSplit1080.swf',
  'Common/Media/FurnaceMenuSplit1080.swf',
  'Common/Media/FullscreenProgressSplit1080.swf',
  'Common/Media/HelpAndOptionsMenuSplit1080.swf',
  'Common/Media/HowToPlaySplit1080.swf',
  'Common/Media/HowToPlayMenuSplit1080.swf',
  'Common/Media/HUDSplit1080.swf',
  'Common/Media/InGameHostOptionsSplit1080.swf',
  'Common/Media/InGameInfoMenuSplit1080.swf',
  'Common/Media/InGameTeleportMenuSplit1080.swf',
  'Common/Media/InGamePlayerOptionsSplit1080.swf',
  'Common/Media/InventoryMenuSplit1080.swf',
  'Common/Media/MessageBoxSplit1080.swf',
  'Common/Media/PanoramaSplit1080.swf',
  'Common/Media/PauseMenuSplit1080.swf',
  'Common/Media/ReinstallMenuSplit1080.swf',
  'Common/Media/SettingsAudioMenuSplit1080.swf',
  'Common/Media/SettingsControlMenuSplit1080.swf',
  'Common/Media/SettingsGraphicsMenuSplit1080.swf',
  'Common/Media/SettingsMenuSplit1080.swf',
  'Common/Media/SettingsOptionsMenuSplit1080.swf',
  'Common/Media/SettingsUIMenuSplit1080.swf',
  'Common/Media/SignEntryMenuSplit1080.swf',
  'Common/Media/SkinSelectMenuSplit1080.swf',
  'Common/Media/TimerSplit1080.swf',
  'Common/Media/ToolTipsSplit1080.swf',
  'Common/Media/TradingMenuSplit1080.swf',
  'Common/Media/TutorialPopupSplit1080.swf',
  'Common/Media/Keyboard1080.swf',
  'Common/Media/KeyboardSplit1080.swf'
]
archive_sources_movies720 = [
  'Common/Media/skinGraphics.swf',
  'Common/Media/skinGraphicsHud.swf',
  'Common/Media/skinGraphicsLabels.swf',
  'Common/Media/skinGraphicsInGame.swf',
  'Common/Media/skin.swf',
  'Common/Media/skinHud.swf',
  'Common/Media/skinLabels.swf',
  'Common/Media/skinInGame.swf',
  'Common/Media/AnvilMenu720.swf',
  'Common/Media/BrewingStandMenu720.swf',
  'Common/Media/ChestMenu720.swf',
  'Common/Media/ChestLargeMenu720.swf',
  'Common/Media/ComponentLogo720.swf',
  'Common/Media/Controls720.swf',
  'Common/Media/CreateWorldMenu720.swf',
  'Common/Media/CreativeMenu720.swf',
  'Common/Media/Credits720.swf',
  'Common/Media/Crafting2x2Menu720.swf',
  'Common/Media/Crafting3x3Menu720.swf',
  'Common/Media/DeathMenu720.swf',
  'Common/Media/DebugCreateSchematic720.swf',
  'Common/Media/DebugMenu720.swf',
  'Common/Media/DebugOptionsMenu720.swf',
  'Common/Media/DebugSetCamera720.swf',
  'Common/Media/DebugUIConsoleComponent720.swf',
  'Common/Media/DebugUIMarketingGuide720.swf',
  'Common/Media/DLCMainMenu720.swf',
  'Common/Media/DispenserMenu720.swf',
  'Common/Media/EnchantingMenu720.swf',
  'Common/Media/EndPoem720.swf',
  'Common/Media/EULA720.swf',
  'Common/Media/FullscreenProgress720.swf',
  'Common/Media/FurnaceMenu720.swf',
  'Common/Media/HelpAndOptionsMenu720.swf',
  'Common/Media/HowToPlay720.swf',
  'Common/Media/HowToPlayMenu720.swf',
  'Common/Media/HUD720.swf',
  'Common/Media/InGameHostOptions720.swf',
  'Common/Media/InGameInfoMenu720.swf',
  'Common/Media/InGamePlayerOptions720.swf',
  'Common/Media/InGameTeleportMenu720.swf',
  'Common/Media/Intro720.swf',
  'Common/Media/InventoryMenu720.swf',
  'Common/Media/JoinMenu720.swf',
  'Common/Media/LoadOrJoinMenu720.swf',
  'Common/Media/LaunchMoreOptionsMenu720.swf',
  'Common/Media/LeaderboardMenu720.swf',
  'Common/Media/LoadMenu720.swf',
  'Common/Media/MainMenu720.swf',
  'Common/Media/MenuBackground720.swf',
  'Common/Media/MessageBox720.swf',
  'Common/Media/NewUpdateMessage720.swf',
  'Common/Media/Panorama720.swf',
  'Common/Media/PauseMenu720.swf',
  'Common/Media/PressStartToPlay720.swf',
  'Common/Media/QuadrantSignin720.swf',
  'Common/Media/ReinstallMenu720.swf',
  'Common/Media/SaveMessage720.swf',
  'Common/Media/SettingsMenu720.swf',
  'Common/Media/SettingsAudioMenu720.swf',
  'Common/Media/SettingsControlMenu720.swf',
  'Common/Media/SettingsGraphicsMenu720.swf',
  'Common/Media/SettingsOptionsMenu720.swf',
  'Common/Media/SettingsUIMenu720.swf',
  'Common/Media/SignEntryMenu720.swf',
  'Common/Media/SkinSelectMenu720.swf',
  'Common/Media/Timer720.swf',
  'Common/Media/ToolTips720.swf',
  'Common/Media/TradingMenu720.swf',
  'Common/Media/TutorialPopup720.swf',
  'Common/Media/AnvilMenuSplit720.swf',
  'Common/Media/BrewingStandMenuSplit720.swf',
  'Common/Media/ChestMenuSplit720.swf',
  'Common/Media/ChestLargeMenuSplit720.swf',
  'Common/Media/ControlsSplit720.swf',
  'Common/Media/ComponentLogoSplit720.swf',
  'Common/Media/Crafting2x2MenuSplit720.swf',
  'Common/Media/Crafting3x3MenuSplit720.swf',
  'Common/Media/CreativeMenuSplit720.swf',
  'Common/Media/DeathMenuSplit720.swf',
  'Common/Media/DispenserMenuSplit720.swf',
  'Common/Media/EnchantingMenuSplit720.swf',
  'Common/Media/FurnaceMenuSplit720.swf',
  'Common/Media/FullscreenProgressSplit720.swf',
  'Common/Media/GamertagSplit720.swf',
  'Common/Media/HelpAndOptionsMenuSplit720.swf',
  'Common/Media/HowToPlaySplit720.swf',
  'Common/Media/HowToPlayMenuSplit720.swf',
  'Common/Media/HUDSplit720.swf',
  'Common/Media/InGameHostOptionsSplit720.swf',
  'Common/Media/InGameInfoMenuSplit720.swf',
  'Common/Media/InGamePlayerOptionsSplit720.swf',
  'Common/Media/InventoryMenuSplit720.swf',
  'Common/Media/MessageBoxSplit720.swf',
  'Common/Media/PanoramaSplit720.swf',
  'Common/Media/PauseMenuSplit720.swf',
  'Common/Media/ReinstallMenuSplit720.swf',
  'Common/Media/SettingsAudioMenuSplit720.swf',
  'Common/Media/SettingsControlMenuSplit720.swf',
  'Common/Media/SettingsGraphicsMenuSplit720.swf',
  'Common/Media/SettingsMenuSplit720.swf',
  'Common/Media/SettingsOptionsMenuSplit720.swf',
  'Common/Media/SettingsUIMenuSplit720.swf',
  'Common/Media/SignEntryMenuSplit720.swf',
  'Common/Media/InGameTeleportMenuSplit720.swf',
  'Common/Media/ToolTipsSplit720.swf',
  'Common/Media/TradingMenuSplit720.swf',
  'Common/Media/TrialExitUpsell720.swf',
  'Common/Media/TutorialPopupSplit720.swf',
  'Common/Media/SkinSelectMenuSplit720.swf'
]
archive_sources_movies480 = [
  'Common/Media/AnvilMenu480.swf',
  'Common/Media/BrewingStandMenu480.swf',
  'Common/Media/ChestLargeMenu480.swf',
  'Common/Media/ChestMenu480.swf',
  'Common/Media/Controls480.swf',
  'Common/Media/ComponentLogo480.swf',
  'Common/Media/Crafting2x2Menu480.swf',
  'Common/Media/Crafting3x3Menu480.swf',
  'Common/Media/CreateWorldMenu480.swf',
  'Common/Media/CreativeMenu480.swf',
  'Common/Media/Credits480.swf',
  'Common/Media/DeathMenu480.swf',
  'Common/Media/DispenserMenu480.swf',
  'Common/Media/DLCMainMenu480.swf',
  'Common/Media/EnchantingMenu480.swf',
  'Common/Media/EndPoem480.swf',
  'Common/Media/EULA480.swf',
  'Common/Media/FullscreenProgress480.swf',
  'Common/Media/FurnaceMenu480.swf',
  'Common/Media/HelpAndOptionsMenu480.swf',
  'Common/Media/HowToPlay480.swf',
  'Common/Media/HowToPlayMenu480.swf',
  'Common/Media/HUD480.swf',
  'Common/Media/InGameHostOptions480.swf',
  'Common/Media/InGameInfoMenu480.swf',
  'Common/Media/InGamePlayerOptions480.swf',
  'Common/Media/Intro480.swf',
  'Common/Media/InventoryMenu480.swf',
  'Common/Media/JoinMenu480.swf',
  'Common/Media/LaunchMoreOptionsMenu480.swf',
  'Common/Media/LeaderboardMenu480.swf',
  'Common/Media/LoadMenu480.swf',
  'Common/Media/LoadOrJoinMenu480.swf',
  'Common/Media/MainMenu480.swf',
  'Common/Media/MenuBackground480.swf',
  'Common/Media/MessageBox480.swf',
  'Common/Media/NewUpdateMessage480.swf',
  'Common/Media/Panorama480.swf',
  'Common/Media/PauseMenu480.swf',
  'Common/Media/PressStartToPlay480.swf',
  'Common/Media/ReinstallMenu480.swf',
  'Common/Media/SaveMessage480.swf',
  'Common/Media/SettingsAudioMenu480.swf',
  'Common/Media/SettingsControlMenu480.swf',
  'Common/Media/SettingsGraphicsMenu480.swf',
  'Common/Media/SettingsMenu480.swf',
  'Common/Media/SettingsOptionsMenu480.swf',
  'Common/Media/SettingsUIMenu480.swf',
  'Common/Media/SignEntryMenu480.swf',
  'Common/Media/SkinSelectMenu480.swf',
  'Common/Media/InGameTeleportMenu480.swf',
  'Common/Media/Timer480.swf',
  'Common/Media/ToolTips480.swf',
  'Common/Media/TradingMenu480.swf',
  'Common/Media/TrialExitUpsell480.swf',
  'Common/Media/TutorialPopup480.swf'
]
archive_sources_moviesVita = [
  'Common/Media/skinGraphics.swf',
  'Common/Media/skinGraphicsHud.swf',
  'Common/Media/skinGraphicsLabels.swf',
  'Common/Media/skinGraphicsInGame.swf',
  'Common/Media/skin.swf',
  'Common/Media/skinHud.swf',
  'Common/Media/skinLabels.swf',
  'Common/Media/skinInGame.swf',
  'Common/Media/AnvilMenuVita.swf',
  'Common/Media/BrewingStandMenuVita.swf',
  'Common/Media/ChestLargeMenuVita.swf',
  'Common/Media/ChestMenuVita.swf',
  'Common/Media/ComponentLogoVita.swf',
  'Common/Media/ControlsVita.swf',
  'Common/Media/ControlsTVVita.swf',
  'Common/Media/Crafting2x2MenuVita.swf',
  'Common/Media/Crafting3x3MenuVita.swf',
  'Common/Media/CreateWorldMenuVita.swf',
  'Common/Media/CreativeMenuVita.swf',
  'Common/Media/CreditsVita.swf',
  'Common/Media/DeathMenuVita.swf',
  'Common/Media/DispenserMenuVita.swf',
  'Common/Media/DLCMainMenuVita.swf',
  'Common/Media/EnchantingMenuVita.swf',
  'Common/Media/EndPoemVita.swf',
  'Common/Media/EULAVita.swf',
  'Common/Media/FullscreenProgressVita.swf',
  'Common/Media/FurnaceMenuVita.swf',
  'Common/Media/HelpAndOptionsMenuVita.swf',
  'Common/Media/HowToPlayMenuVita.swf',
  'Common/Media/HowToPlayVita.swf',
  'Common/Media/HUDVita.swf',
  'Common/Media/InGameHostOptionsVita.swf',
  'Common/Media/InGameInfoMenuVita.swf',
  'Common/Media/InGamePlayerOptionsVita.swf',
  'Common/Media/InGameTeleportMenuVita.swf',
  'Common/Media/IntroVita.swf',
  'Common/Media/InventoryMenuVita.swf',
  'Common/Media/JoinMenuVita.swf',
  'Common/Media/LaunchMoreOptionsMenuVita.swf',
  'Common/Media/LeaderboardMenuVita.swf',
  'Common/Media/LoadMenuVita.swf',
  'Common/Media/LoadOrJoinMenuVita.swf',
  'Common/Media/MainMenuVita.swf',
  'Common/Media/MenuBackgroundVita.swf',
  'Common/Media/MessageBoxVita.swf',
  'Common/Media/NewUpdateMessageVita.swf',
  'Common/Media/PanoramaVita.swf',
  'Common/Media/PauseMenuVita.swf',
  'Common/Media/PressStartToPlayVita.swf',
  'Common/Media/ReinstallMenuVita.swf',
  'Common/Media/SaveMessageVita.swf',
  'Common/Media/SettingsAudioMenuVita.swf',
  'Common/Media/SettingsControlMenuVita.swf',
  'Common/Media/SettingsGraphicsMenuVita.swf',
  'Common/Media/SettingsMenuVita.swf',
  'Common/Media/SettingsOptionsMenuVita.swf',
  'Common/Media/SettingsUIMenuVita.swf',
  'Common/Media/SignEntryMenuVita.swf',
  'Common/Media/SkinSelectMenuVita.swf',
  'Common/Media/TimerVita.swf',
  'Common/Media/ToolTipsVita.swf',
  'Common/Media/TradingMenuVita.swf',
  'Common/Media/TutorialPopupVita.swf',
  'Common/Media/DebugCreateSchematic720.swf',
  'Common/Media/DebugMenu720.swf',
  'Common/Media/DebugOptionsMenu720.swf',
  'Common/Media/DebugSetCamera720.swf',
  'Common/Media/DebugUIConsoleComponent720.swf',
  'Common/Media/DebugUIMarketingGuide720.swf'
]

media_archive = custom_target('Minecraft.Media_Archive',
  output : 'MediaLinux.arc',
  input : archive_sources + archive_sources_movies1080 + archive_sources_movies720,
  command : [
    python, meson.project_source_root() / 'scripts/pack_arc.py',
    '@OUTPUT@',
    '@INPUT@'
  ],
  install_dir : 'Common/Media',
  install : true,
  build_by_default : true
)

#
# Dep defines
#

assets_localisation_dep = declare_dependency(
  sources : localisation[1],
  # sources : client_platform_path / 'Windows64Media/strings.h', 
  include_directories : include_directories('.')
)